--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,114 @@
+html,
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  font-family: "Nunito", sans-serif;
+  box-sizing: border-box;
+  text-align: center;
+  color: white;
+}
 .hidden {
   display: none;
+}
+span {
+  color: white;
+  margin-right: 15px;
+}
+
+button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: white;
+}
+
+input {
+  border: 2px solid white;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  background: transparent;
+  outline: none;
+  text-align: center;
+  color: white;
+}
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+}
+#weather {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 5px;
+}
+
+#weather span {
+  font-style: italic;
+  opacity: 0.8;
+}
+
+#clock {
+  position: flex;
+  margin-top: 170px;
+  margin-bottom: 0;
+  font-size: 150px;
+  color: white;
+  text-align: center;
+}
+
+#login-form {
+  position: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+#login-form input:first-child {
+  width: 350px;
+  height: 55px;
+  margin: 21px;
+  font-size: 40px;
+}
+#login-form input:first-child::placeholder {
+  text-align: center;
+  color: white;
+  font-size: 30px;
+}
+#greeting {
+  height: 55px;
+  font-size: 40px;
+  margin-bottom: 0px;
+}
+
+#todo-form input:first-child {
+  width: 200px;
+  height: 45px;
+  font-size: 20px;
+}
+
+#todo-form input:first-child::placeholder {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+
+#todo-list {
+  list-style: none;
+}
+
+#quotes {
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  bottom: 10px;
+}
+
+#quotes span {
+  font-size: 10px;
 }
