--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 span {
   color: white;
   margin-right: 15px;
+  font-size: 20px;
 }
 
 button {
@@ -84,11 +85,11 @@ img {
 #greeting {
   height: 55px;
   font-size: 40px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
 }
 
 #todo-form input:first-child {
-  width: 300x;
+  width: 300px;
   height: 45px;
   font-size: 27px;
 }
@@ -101,10 +102,6 @@ img {
 
 #todo-list {
   list-style: none;
-}
-
-#todo-list li span {
-  font-size: 20px;
 }
 
 #quotes {
